# MidiSynthThing

./: CMakeLists.txt  MetaEvent.cpp  MetaEvent.h  MidiEvent.cpp  MidiEvent.h  MidiSong.cpp  MidiSong.h  MidiTrack.cpp  MidiTrack.h  README.md  Sample.midi  Synth.cpp  Synth.h  TrackEvent.cpp  TrackEvent.h  main.cpp  utils.cpp  utils.h
